--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: SportsObserveR
-Title: What the Package Does (One Line, Title Case)
+Title: Scrape Sports Statistics Off Sports-Reference.com
 Version: 0.0.0.9000
+Imports: rvest, magrittr
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Randi", "Bolt", , "randibolt93@gmail.com", role = c("aut", "cre"))
+Description: This package is made up of many functions that scrape data off sports-reference.com.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+BugReports: https://github.com/rbolt13/SportsObserveR/issues
